--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@ plugins {
     id 'pl.allegro.tech.build.axion-release' version '1.7.1'
 }
 
-version = '2.10.0'
+version = '2.11.5'
+def nomad_sdk_version = '0.8.6.1'
 defaultTasks 'clean','build'
 apply plugin: 'java'
 apply plugin: 'idea'
@@ -29,11 +30,12 @@ repositories {
 dependencies {
     compile(
             [group: 'org.rundeck', name: 'rundeck-core', version: version, ext: 'jar'],
-            [group: 'com.hashicorp.nomad', name: 'nomad-sdk', version: '0.7.0', ext: 'jar']
+            [group: 'org.rundeck', name: 'rundeck-storage-api', version: version, ext: 'jar'],
+            [group: 'com.hashicorp.nomad', name: 'nomad-sdk', version: nomad_sdk_version , ext: 'jar']
     )
 
     pluginLibs(
-            [group: 'com.hashicorp.nomad', name: 'nomad-sdk', version: '0.7.0', ext: 'jar'],
+            [group: 'com.hashicorp.nomad', name: 'nomad-sdk', version: nomad_sdk_version, ext: 'jar'],
             [group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3']
     )
 
@@ -41,7 +43,7 @@ dependencies {
             [group: 'junit', name: 'junit', version: '4.12', ext: 'jar'],
             [group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3', ext: 'jar'],
             [group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3', ext: 'jar'],
-            [group: 'com.hashicorp.nomad', name: 'nomad-sdk', version: '0.7.0', ext: 'jar'],
+            [group: 'com.hashicorp.nomad', name: 'nomad-sdk', version: nomad_sdk_version, ext: 'jar'],
             [group: 'org.jbundle.util.osgi.wrapped', name: 'org.jbundle.util.osgi.wrapped.org.apache.http.client', version: '4.1.2']
 
 
