--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,10 @@ dependencies {
 
     pluginLibs(
             [group: 'com.hashicorp.nomad', name: 'nomad-sdk', version: nomad_sdk_version, ext: 'jar'],
-            [group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3']
+            [group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'],
+            [group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.9'],
+            [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.9.3'],
+            [group: 'org.json', name:'json', version: '20180813', ext:'jar'],
     )
 
     testCompile(
@@ -46,8 +49,6 @@ dependencies {
             [group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3', ext: 'jar'],
             [group: 'com.hashicorp.nomad', name: 'nomad-sdk', version: nomad_sdk_version, ext: 'jar'],
             [group: 'org.jbundle.util.osgi.wrapped', name: 'org.jbundle.util.osgi.wrapped.org.apache.http.client', version: '4.1.2']
-
-
     )
 }
 
